hphp/test/zend/good/tests/classes/autoload/autoload_011.php.expectf
Fatal error: unknown class UndefBase in %s/autoload_011.php on line 3
